--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "https://www.linkedin.com/in/kunal-rustagi/"
+  linkedin         : "https://www.linkedin.com/in/kunal-rustagi/"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
