--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kunal Rustagi"
-  avatar           : "profile.png"
+  avatar           : "profile1.jpeg"
   bio              : "ENTC undergrad at Pune University. Image Processing. Cricket. Brawl Stars..."
   location         : "Pune, India"
   employer         :
