Updated background information

--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Kunal Rustagi"
   avatar           : "profile1.jpeg"
-  bio              : "Research Intern at IITM. UG from Pune University. Cricket. Brawl Stars..."
+  bio              : "Decision Analytics Associate. UG from Pune University, Ex-Research Intern at IITM "
   location         : "Pune, India"
-  employer         :
+  employer         :  "ZS Associates"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=N3e8a7kAAAAJ&hl=en"
   email            : "rustagi.kunal@outlook.com"
