minor fix in contact page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /teaching/
 
   - title: "Contact"
-    url: /contact/,
+    url: /contact/
   
   - title: "Blog Posts"
     url: /year-archive/
