--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Kunal Rustagi"
   avatar           : "profile_1.png"
-  bio              : "ECE Graduate at UCSD | Teaching Assistant | Moderna | ZS Associates"
+  bio              : "Data Science Graduate at UCSD | HaulerHero | Moderna | ZS Associates"
   location         : "San Diego, CA"
   employer         : "University of California, San Diego"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
