--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Kunal Rustagi"
   avatar           : "profile_1.png"
   bio              : "Data Science Graduate at UCSD | HaulerHero | Moderna | ZS Associates"
-  location         : "San Diego, CA"
-  employer         : "University of California, San Diego"
+  location         : "United States"
+  employer         : # "University of California, San Diego"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=N3e8a7kAAAAJ&hl=en"
   email            : "kurustagi@ucsd.edu"
